--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -42,13 +43,14 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
 </noscript>
+<div id="app"></div>
+<!-- built files will be auto injected-->
 <div class="main">
     <div class="navbar">
         <div class="icon"></div>
         <h10 class="logo">Klassiraha</h10>
     </div>
 </div>
-
 <!--<div class="menu">-->
 <!--    <ul>-->
 <!--        <li><a href="#">ABOUT</a></li>-->
@@ -62,6 +64,5 @@
 <!--</div>-->
 <!--<main id="background">-->
 <!--</main>-->
-<!-- built files will be auto injected-->
 </body>
 </html>
